Move JVM options to file in sbt root